<resources>
    <string name="app_name">Inclusao</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="entrar">Entrar</string>
    <string name="Cadastro">Crie uma conta clicando aqui</string>
    <string name="text_email">Email</string>
    <string name="text_senha">Senha</string>
    <string name="logo">logo</string>
    <string name="letras">letras</string>
    <string name="text_cadastro">Cadastre-se</string>
    <string name="text_name"> Nome </string>
    <string name="text_sobrenome">Sobrenome</string>
    <string name="text_CEP">CEP</string>
    <string name="text_Rua">Rua</string>
    <string name="text_estado">Estado</string>
    <string name="text_Cidade">Cidade</string>
    <string name="text_avançar">Avançar</string>
    <string name="text_telefone">Telefone</string>
    <string name="text_login_cadastrar">Entrar ou cadastra-se</string>
    <string name="text_entrar_convidado">Entrar como convidado</string>
    <string name="text_welcome">Bem-vindo</string>
    <string name="texto_descriçao1">ao espaço de educação inclusiva de Ibirité</string>
    <string name="texto_pular">Pular</string>
    <string name="texto_proximo">Próximo</string>
    <string name="texto_explicacao1">No aplicativo de educação inclusiva de Ibirité, você encontrará notícias, informações sobre nossos projetos, dicas, explicações e muito mais.</string>
    <string name="texto_welcome3">O aplicativo é voltado para facilitar a nossa comunicação. Estamos disponíveis para resolver qualquer problema que surgir e gostaríamos de lembrar você de avaliar a sua experiência com o aplicativo.</string>
    <string name="text_Buscar">Buscar</string>
    <string name="text_bairro">Bairro</string>
    <string name="text_Sim">Sim</string>
    <string name="text_Não">Não</string>
    <string name="text_question">Convive com alguém que tenha alguma deficiência?</string>
    <string name="text_question_deficiencia">Qual o grau de parentesco com a pessoa?</string>
    <string name="text_question_deficiencia2">Qual a necessidade especial da pessoa?</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


</resources>