<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    tools:context=".Screens.WelcomeScreen1">

    <ImageView
        android:id="@+id/img_welcome"
        android:layout_width="600dp"
        android:layout_height="400dp"
        android:src="@drawable/welcome1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <TextView
        android:id="@+id/text_bemvindo"
        style="@style/ShowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_welcome"
        android:textColor="@color/blue1"
        android:gravity="center"
        android:textSize="35sp"
        android:layout_marginBottom="30dp"
        />

    <TextView
        android:id="@+id/text_description"
        style="@style/ShowText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_descriçao1"
        android:textColor="@color/blue2"
        app:layout_constraintTop_toBottomOf="@id/text_bemvindo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="22sp"
        android:gravity="center"
        />

    <ImageView
        android:id="@+id/imageRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_circle_full"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageempty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="192dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/outline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageempty2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="160dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/outline_circle_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Próximo"
        style="@style/ShowText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/texto_proximo"
        android:textColor="@color/blue1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/Pular"
        style="@style/ShowText"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="260dp"
        android:gravity="center"
        android:text="@string/texto_pular"
        android:textColor="@color/blue2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>